<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="@string/mainMenu"
        android:id="@+id/text_mainMenu"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        />
    <TextView android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="@string/newGame"
        android:id="@+id/text_newGame"
        android:layout_below="@+id/text_mainMenu"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        />
    <TextView android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="@string/store"
        android:layout_below="@+id/text_newGame"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        />
	
</RelativeLayout>