<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/game_store_detail_object_name"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/game_store_detail_image"
        android:padding="16dp"
        android:text="@string/store_activity_default_text"
        tools:context=".StoreItemDetailFragment" />

    <ImageView
        android:id="@+id/game_store_detail_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/store_activity_default_text"
        android:padding="20dp"
        android:src="@drawable/store_item_default" />

    <TextView
        android:id="@+id/game_store_detail_object_price"
        style="@android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_store_detail_image"
        android:layout_marginLeft="20dp"
        android:padding="16dp"
        android:text="@string/store_activity_default_price"
        tools:context=".StoreItemDetailFragment" />

    <TextView
        android:id="@+id/game_store_detail_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_store_detail_object_name"
        android:layout_toRightOf="@+id/game_store_detail_image"
        android:padding="16dp"
        android:text="@string/lorem_ipsum"
        tools:context=".StoreItemDetailFragment" />

</RelativeLayout>