<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_activity_background" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:shadowColor="@color/game_activity_high_score_shadow"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="3.5"
        android:text="@string/game_activity_score_text"
        android:textColor="@color/game_activity_high_score"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        android:typeface="sans" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/game_activity_tank_image_description"
        android:src="@drawable/tank" />

    <ImageView
        android:id="@+id/shield_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/game_activity_shield_image_description"
        android:padding="20dp"
        android:src="@drawable/shield" />

    <ImageView
        android:id="@+id/shield_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/shield_1"
        android:layout_toLeftOf="@+id/shield_1"
        android:contentDescription="@string/game_activity_shield_image_description"
        android:padding="20dp"
        android:src="@drawable/shield" />

    <ImageView
        android:id="@+id/shield_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/shield_2"
        android:layout_toLeftOf="@+id/shield_2"
        android:contentDescription="@string/game_activity_shield_image_description"
        android:padding="20dp"
        android:src="@drawable/shield" />

    <ImageView
        android:id="@+id/zombie_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/game_activity_zombie_image_description"
        android:padding="20dp"
        android:src="@drawable/zombie" />

    <ImageView
        android:id="@+id/zombie_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/game_activity_zombie_image_description"
        android:padding="20dp"
        android:src="@drawable/zombie" />

</RelativeLayout>